Possible fix profile picture

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html">Home</a>
 
       </nav>
-      <img class="intro-picture" src="images/DG-cropped.png" alt="My very own circular picture!">
+      <img class="intro-picture" src="images/dg-cropped.png" alt="My very own circular picture!">
       <div class="welcome-panel">
         <h1>Hello there!</h1>
         <p>Welcome to my website.</p>
